force-app/main/default/objects/Sectorisation__c/Sectorisation__c.object-meta.xml
<CustomObject>
    <label>Sectorisation</label>
    <nameField>
        <label>Nom de Sectorisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sectorisations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>