force-app/main/default/objects/Sectorisation__c/fields/codeCommuneAdm__c.field-meta.xml
<CustomField>
    <fullName>codeCommuneAdm__c</fullName>
    <label>Code commune</label>
    <length>10</length>
    <type>Text</type>
</CustomField>