force-app/main/default/objects/Sectorisation__c/fields/codeDepartementAdm__c.field-meta.xml
<CustomField>
    <fullName>codeDepartementAdm__c</fullName>
    <label>Code département</label>
    <length>10</length>
    <type>Text</type>
</CustomField>