force-app/main/default/objects/Sectorisation__c/fields/codePostalAdm__c.field-meta.xml
<CustomField>
    <fullName>codePostalAdm__c</fullName>
    <label>Code postal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>