force-app/main/default/objects/Sectorisation__c/fields/codePostalDepot__c.field-meta.xml
<CustomField>
    <fullName>codePostalDepot__c</fullName>
    <label>Code postal dépôt</label>
    <length>20</length>
    <type>Text</type>
</CustomField>