force-app/main/default/objects/Sectorisation__c/fields/codePostalMagasin__c.field-meta.xml
<CustomField>
    <fullName>codePostalMagasin__c</fullName>
    <label>Code postal magasin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>