force-app/main/default/objects/Sectorisation__c/fields/codeRegion__c.field-meta.xml
<CustomField>
    <fullName>codeRegion__c</fullName>
    <label>Code région</label>
    <length>10</length>
    <type>Text</type>
</CustomField>