force-app/main/default/objects/Sectorisation__c/fields/emailDepot__c.field-meta.xml
<CustomField>
    <fullName>emailDepot__c</fullName>
    <label>Email dépôt</label>
    <type>Email</type>
</CustomField>