force-app/main/default/objects/Sectorisation__c/fields/emailMagasin__c.field-meta.xml
<CustomField>
    <fullName>emailMagasin__c</fullName>
    <label>Email magasin</label>
    <type>Email</type>
</CustomField>