force-app/main/default/objects/Sectorisation__c/fields/emailResponsableDepot__c.field-meta.xml
<CustomField>
    <fullName>emailResponsableDepot__c</fullName>
    <label>Email responsable dépôt</label>
    <type>Email</type>
</CustomField>