force-app/main/default/objects/Sectorisation__c/fields/IRIS__c.field-meta.xml
<CustomField>
    <fullName>IRIS__c</fullName>
    <externalId>true</externalId>
    <label>IRIS</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>