force-app/main/default/objects/Sectorisation__c/fields/libelleDepot__c.field-meta.xml
<CustomField>
    <fullName>libelleDepot__c</fullName>
    <label>Dépôt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>