force-app/main/default/objects/Sectorisation__c/fields/libelleDS__c.field-meta.xml
<CustomField>
    <fullName>libelleDS__c</fullName>
    <label>DS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>