force-app/main/default/objects/Sectorisation__c/fields/libelleDV__c.field-meta.xml
<CustomField>
    <fullName>libelleDV__c</fullName>
    <label>DV</label>
    <length>100</length>
    <type>Text</type>
</CustomField>