force-app/main/default/objects/Sectorisation__c/fields/libelleMagasin__c.field-meta.xml
<CustomField>
    <fullName>libelleMagasin__c</fullName>
    <externalId>true</externalId>
    <label>Magasin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>