force-app/main/default/objects/Sectorisation__c/fields/libelleRegion__c.field-meta.xml
<CustomField>
    <fullName>libelleRegion__c</fullName>
    <label>Région</label>
    <length>100</length>
    <type>Text</type>
</CustomField>