force-app/main/default/objects/Sectorisation__c/fields/localisationDepot__c.field-meta.xml
<CustomField>
    <fullName>localisationDepot__c</fullName>
    <label>Localisation dépôt</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>