force-app/main/default/objects/Sectorisation__c/fields/localisationMagasin__c.field-meta.xml
<CustomField>
    <fullName>localisationMagasin__c</fullName>
    <label>Localisation magasin</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>