force-app/main/default/objects/Sectorisation__c/fields/longueurIris__c.field-meta.xml
<CustomField>
    <fullName>longueurIris__c</fullName>
    <formula>LEN(IRIS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longueur Iris</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>