force-app/main/default/objects/Sectorisation__c/fields/nomCommuneAdm__c.field-meta.xml
<CustomField>
    <fullName>nomCommuneAdm__c</fullName>
    <label>Nom commune</label>
    <length>100</length>
    <type>Text</type>
</CustomField>