force-app/main/default/objects/Sectorisation__c/fields/nomDepartementAdm__c.field-meta.xml
<CustomField>
    <fullName>nomDepartementAdm__c</fullName>
    <label>Nom département</label>
    <length>100</length>
    <type>Text</type>
</CustomField>