force-app/main/default/objects/Sectorisation__c/fields/nomRegionAdm__c.field-meta.xml
<CustomField>
    <fullName>nomRegionAdm__c</fullName>
    <label>Nom région</label>
    <length>100</length>
    <type>Text</type>
</CustomField>