force-app/main/default/objects/Sectorisation__c/fields/paysDepot__c.field-meta.xml
<CustomField>
    <fullName>paysDepot__c</fullName>
    <label>Pays dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>