force-app/main/default/objects/Sectorisation__c/fields/paysMagasin__c.field-meta.xml
<CustomField>
    <fullName>paysMagasin__c</fullName>
    <label>Pays magasin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>