force-app/main/default/objects/Sectorisation__c/fields/responsableDepot__c.field-meta.xml
<CustomField>
    <fullName>responsableDepot__c</fullName>
    <label>Responsable dépôt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>