force-app/main/default/objects/Sectorisation__c/fields/rueDepot__c.field-meta.xml
<CustomField>
    <fullName>rueDepot__c</fullName>
    <label>Rue dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>