force-app/main/default/objects/Sectorisation__c/fields/rueMagasin__c.field-meta.xml
<CustomField>
    <fullName>rueMagasin__c</fullName>
    <label>Rue magasin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>