force-app/main/default/objects/Sectorisation__c/fields/telecopieDepot__c.field-meta.xml
<CustomField>
    <fullName>telecopieDepot__c</fullName>
    <label>FAX dépôt</label>
    <type>Phone</type>
</CustomField>