force-app/main/default/objects/Sectorisation__c/fields/telecopieMagasin__c.field-meta.xml
<CustomField>
    <fullName>telecopieMagasin__c</fullName>
    <label>FAX magasin</label>
    <type>Phone</type>
</CustomField>