force-app/main/default/objects/Sectorisation__c/fields/telephoneDepot__c.field-meta.xml
<CustomField>
    <fullName>telephoneDepot__c</fullName>
    <label>Téléphone dépôt</label>
    <type>Phone</type>
</CustomField>