force-app/main/default/objects/Sectorisation__c/fields/telephoneMagasin__c.field-meta.xml
<CustomField>
    <fullName>telephoneMagasin__c</fullName>
    <label>Téléphone magasin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>