force-app/main/default/objects/Sectorisation__c/fields/villeDepot__c.field-meta.xml
<CustomField>
    <fullName>villeDepot__c</fullName>
    <label>Ville dépôt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>