force-app/main/default/objects/Sectorisation__c/fields/villeMagasin__c.field-meta.xml
<CustomField>
    <fullName>villeMagasin__c</fullName>
    <label>Ville magasin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>