force-app/main/default/objects/Sectorisation__c/listViews/DCA.listView-meta.xml
<ListView>
    <fullName>DCA</fullName>
    <columns>NAME</columns>
    <columns>IRIS__c</columns>
    <columns>libelleDV__c</columns>
    <columns>libelleMagasin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IRIS__c</field>
        <operation>equals</operation>
        <value>627650302</value>
    </filters>
    <label>DCA</label>
    <language>fr</language>
</ListView>