force-app/main/default/objects/Sectorisation__c/listViews/MODIFS_DL.listView-meta.xml
<ListView>
    <fullName>MODIFS_DL</fullName>
    <columns>NAME</columns>
    <columns>codeMagasin__c</columns>
    <columns>emailMagasin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>codeMagasin__c</field>
        <operation>equals</operation>
        <value>MAG0020</value>
    </filters>
    <label>MODIFS DL</label>
    <language>fr</language>
</ListView>