force-app/main/default/objects/Sectorisation__c/listViews/Tous.listView-meta.xml
<ListView>
    <fullName>Tous</fullName>
    <columns>NAME</columns>
    <columns>codeCommuneAdm__c</columns>
    <columns>codePostalAdm__c</columns>
    <columns>nomCommuneAdm__c</columns>
    <columns>IRIS__c</columns>
    <columns>libelleDV__c</columns>
    <columns>libelleMagasin__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
    <language>fr</language>
</ListView>